# ChangeLog for dev-lang/spidermonkey
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.51 2011/03/14 19:35:52 anarchy Exp $

*spidermonkey-1.9.2.15 (14 Mar 2011)

  14 Mar 2011; Jory A. Pratt <anarchy@gentoo.org>
  -spidermonkey-1.9.2.13.ebuild, +spidermonkey-1.9.2.15.ebuild:
  version bump

  02 Jan 2011; Dirkjan Ochtman <djc@gentoo.org>
  spidermonkey-1.9.2.13.ebuild:
  No need to unpack twice, thanks to mgorny for reporting.

  29 Dec 2010; Jory A. Pratt <anarchy@gentoo.org> spidermonkey-1.9.2.13.ebuild:
  Add zip dep bug #350081

*spidermonkey-1.9.2.13 (29 Dec 2010)

  29 Dec 2010; Dirkjan Ochtman <djc@gentoo.org>
  +spidermonkey-1.9.2.13.ebuild,
  +files/spidermonkey-1.9.2.13-as-needed.patch, metadata.xml:
  Version bump to 1.9.2.13 (bug 347914).

*spidermonkey-1.7.0-r2 (06 Aug 2010)

  06 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  +spidermonkey-1.7.0-r2.ebuild, +files/spidermonkey-1.7.0-ldflags.patch:
  Apply patch from Kacper Kowalik <xarthisius@gentoo.org> to respect
  LDFLAGS. Bug #331129

*spidermonkey-1.7.0-r1 (07 Mar 2010)

  07 Mar 2010; Lance Albertson <ramereth@gentoo.org>
  +spidermonkey-1.7.0-r1.ebuild:
  Add unicode support fixing #277697

  29 Dec 2009; Raúl Porcel <armin76@gentoo.org> spidermonkey-1.7.0.ebuild:
  Add ~arm

  23 Aug 2008; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Add GLEP 56 USE flag descriptions.

  10 Apr 2008; Alexis Ballier <aballier@gentoo.org>
  -files/spidermonkey-1.5-header.diff,
  -files/spidermonkey-1.5-threadsafe.diff, -spidermonkey-1.5_rc5.ebuild,
  -spidermonkey-1.5-r1.ebuild, -spidermonkey-1.5-r2.ebuild,
  -spidermonkey-1.6.ebuild:
  remove old

  29 Dec 2007; Brent Baude <ranger@gentoo.org> spidermonkey-1.7.0.ebuild:
  Marking spidermonkey-1.7.0 ppc64 for bug 202885

  26 Dec 2007; Samuli Suominen <drac@gentoo.org> spidermonkey-1.7.0.ebuild:
  amd64 stable wrt #202885
