@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/spidermonkey
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.51 2011/03/14 19:35:52 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.52 2011/03/22 15:51:21 jer Exp $
+
+  22 Mar 2011; Jeroen Roovers <jer@gentoo.org> spidermonkey-1.7.0.ebuild,
+  spidermonkey-1.7.0-r1.ebuild, spidermonkey-1.7.0-r2.ebuild,
+  spidermonkey-1.9.2.15.ebuild:
+  Drop HPPA keywording (bug #357655).
 
 *spidermonkey-1.9.2.15 (14 Mar 2011)
 
